@@ -378,7 +378,7 @@ fi
 
 apt-get install mencoder
 apt-get install netcat original-awk dvdauthor mkisofs gddrescue
-apt-get install dvd+rw-tools lsdvd 
+apt-get install dvd+rw-tools lsdvd dvdbackup
 apt-get install submux-dvd subtitleripper transcode mjpegtools libdvdcss2 openssh-server openssh-client
 apt-get install liba52-0.7.4 libfaac0 libmp3lame0 libmp4v2-0 libogg0 libsamplerate0 libx264-85 libxvidcore4
 apt-get install libbz2-1.0 libgcc1 libstdc++6 zlib1g
