@@ -234,6 +234,8 @@ Changes:
   on the project-download url. 	
 - Integrate makemkv 1.6.3 32 bit into setup.sh 
 - Integrate makemkv 1.6.3 64 bit into setup.sh
+- Replace vobcopy with dvdbackup inside setup.sh
+
 
 Fixes: 
 
